# igng_test

./: CMakeLists.txt  model.sdf  test_inertia.cpp
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
log/: latest_build
